# seastash

./: CMakeLists.txt  README.md  test.py
example/: config.lua  es.lua  test.sh
lib/: es.lua  syslog.lua
src/: config.c  msg.c  seastash.c  seastash.h  server.c  worker.c
src/include/: config.h  global.h  msg.h  seastash.h  server.h  worker.h
